<resources>
    <string name="app_name">雨木科技</string>
<!--    <string name="app_name">yumu</string>-->

    <string name="frame_name" translatable="true">AndroidOHP</string>
    <string name="common_copyright">\u00a9 2015 All Rights Reserved</string>
    <string name="navigation_home">首页</string>
    <string name="navigation_manager">管理</string>
    <string name="navigation_backlog">待办事项</string>
    <string name="navigation_mine">我的</string>
    <string name="text_network_error">网络出错，请点击重试</string>
    <string name="text_loading">努力加载中</string>
    <string name="text_mine_account">会计账户(元)</string>
    <string name="text_mine_manager">我的管理</string>
    <string name="text_home_salary_line_curve">工资曲线</string>
    <string name="text_query_all">查看全部</string>

    <string name="common_network">当前没有网络连接，请检查网络设置</string>
    <string name="text_network_state">请确认网络良好</string>
    <string name="common_loading">加载中&#8230;</string>
    <!-- 日期组合控件-->
    <string name="common_year">年</string>
    <string name="common_month">月</string>
    <string name="common_day">日</string>
    <string name="common_hour">时</string>
    <string name="common_minute">分</string>
    <string name="common_second">秒</string>
    <string name="common_text_confirm">确定</string>
    <string name="common_text_clear_screen">清空筛选</string>
    <string name="text_choose_please">请选择</string>
    <string name="date_title">请选择日期</string>
    <!-- 时间对话框 -->
    <string name="time_title">请选择时间</string>
    <!-- 支付密码对话框 -->
    <string name="pay_title">请输入登录密码</string>
    <!-- 地区对话框 -->
    <string name="address_title">请选择地区</string>
    <string name="address_hint">请选择</string>
    <!-- 支付密码对话框 -->
    <!-- 升级对话框 -->
    <string name="update_title">发现新版本</string>
    <string name="update_content">更新内容</string>
    <string name="update_no">下次再说</string>
    <string name="update_status_start">正在下载</string>
    <string name="update_yes">立即更新</string>
    <string name="update_background">后台更新</string>
    <string name="update_status_running">下载中 %d%%</string>
    <string name="update_status_finished">下载完成</string>
    <string name="update_status_successful">立即安装</string>
    <string name="update_status_failed">当前网络较弱，下载失败</string>

    <string name="common_permission_hint">请先授予权限</string>
    <string name="common_permission_fail">授权失败，请手动授予权限</string>
    <string name="text_common_search">搜索</string>
    <string name="text_mine_logout">退出登录</string>

    <string name="common_confirm">确定</string>
    <string name="common_cancel">取消</string>
    <string name="common_clear">清空</string>
    <string name="common_delete">删除</string>
    <string name="common_code_send">发送验证码</string>
    <string name="common_code_send_hint">验证码已发送，请注意查收</string>
    <string name="home_exit_hint">再按一次退出</string>
    <!-- 考勤-->
    <string name="attendance_title"></string>
    <string name="attendance_current_day">当日考勤</string>
    <string name="attendance_current_month">本月考勤</string>
    <string name="salary_current_day">本月工资</string>
    <string name="back_today">回到今天</string>


    <string name="custom_input_please">请输入</string>
    <string name="custom_choose_please">请选择</string>
    <string name="custom_demand_write_detail">请填写需求详情</string>
    <string name="text_plus">添加</string>
    <string name="text_edit">编辑</string>
    <string name="text_copy">复制</string>
    <string name="text_manager">管理</string>
    <string name="text_preview">预览</string>
    <string name="text_download">下载</string>
    <string name="text_login">登录</string>
    <string name="text_account">请输入用户名</string>
    <string name="text_password">请输入密码</string>
    <string name="text_verification_hint">图形验证码</string>
    <string name="text_forget_password">忘记密码？</string>
    <string name="text_login_account">账号密码登录</string>
    <string name="text_next_step">下一步</string>
    <string name="text_upload_attach">上传附件</string>
    <string name="text_add_provision">添加费用计提</string>
    <string name="text_add_follow">新增跟进</string>
    <string name="text_order_data">订单信息</string>
    <string name="text_custom_name">客户名称</string>
    <string name="text_order_name">订单名称</string>
    <string name="text_contract_money">合同金额</string>
    <string name="text_note">备注信息</string>
    <string name="text_none_contract_attach">还没有合同附件</string>
    <string name="text_none_follow">还没有跟进记录</string>
    <string name="text_none_provision">还没有费用计提</string>
    <string name="text_none_approver">还没有审批人</string>
    <string name="text_commit">提交</string>
    <string name="text_order_desc">订单说明</string>
    <string name="text_provision_man">审批人</string>
    <string name="text_provision_money">费用计提</string>
    <string name="text_follow_record">跟进记录</string>
    <string name="text_order_attach">订单附件</string>
    <string name="text_fee_desc">费用说明</string>
    <string name="text_input_provision_money">请输入计提金额</string>
    <string name="text_follow_tips">点击上方标签或填写跟进情况</string>
    <string name="text_follow_next_time">下次跟进时间</string>
    <string name="text_post_allowance">津贴说明</string>
    <string name="text_post_desc">职位描述</string>
    <string name="navigation_staff_data">员工资料</string>
    <string name="navigation_staff_account">会计账户</string>
    <string name="navigation_staff_settle_account">结算账户</string>
    <string name="text_assist_data">辅助信息</string>
    <string name="text_work_experience">工作经历</string>
    <string name="text_leaving_reason">离职原因</string>
    <string name="text_common_time">时间</string>
    <string name="record_apply_man">申请人</string>
    <string name="record_overtime_obj">加班对象</string>
    <string name="record_pre_time">预计加班时间</string>
    <string name="record_actual_time">实际加班时间</string>
    <string name="record_overtime_reason">加班事由</string>
    <string name="text_common_reject">驳回</string>
    <string name="text_common_through">通过</string>
    <string name="text_common_close">关闭</string>
    <string name="text_common_draft">草稿</string>
    <string name="text_passed">已通过</string>
    <string name="text_common_reject_to">驳回到</string>
    <string name="text_record_depart_post">部门职位</string>
    <string name="text_record_leave_time">请假时间</string>
    <string name="text_record_leave_type">请假类型</string>
    <string name="text_record_leave_content">请假事由</string>
    <string name="text_record_out_obj">外出对象</string>
    <string name="text_record_pre_out_time">预计外出时间</string>
    <string name="text_record_actual_out_time">实际外出时间</string>
    <string name="text_record_reissue_time">补卡时间</string>
    <string name="text_record_reissue_reason">补卡事由</string>
    <string name="text_custom_associates">协作人</string>
    <string name="text_custom_receivable">回款</string>
    <string name="text_custom_order_divided">本订单分得</string>
    <string name="text_custom_copy_invoice">复制开票信息</string>
    <string name="text_custom_tax_name">纳税人识别号</string>
    <string name="order_data">订单信息</string>
    <string name="order_attachment">订单附件</string>
    <string name="order_cost">费用计提</string>
    <string name="text_task_allocation">任务分配</string>
    <string name="text_receivable_record">回款记录</string>
    <string name="text_prepaid">已付费用</string>
    <string name="text_quick_function">快捷功能</string>
    <string name="text_complete">全部</string>
    <string name="text_income">收入</string>
    <string name="text_speeding">支出</string>
    <string name="text_audit_records">审核记录</string>
    <string name="text_sms_verify">请输入短信验证码</string>
    <string name="text_invoice_name">开票人</string>
    <string name="text_sellers">销售方</string>
    <string name="text_purchaser">购买方</string>
    <string name="text_invoice_type">发票类型</string>
    <string name="text_Levied_in_total">价税合计</string>
    <string name="text_invoice_amount">开票金额</string>
    <string name="text_invoice_tax">纳税金额</string>
    <string name="text_invoice_ico">发票扫描件</string>
    <string name="text_principal">负责人</string>
    <string name="text_origin">来源</string>
    <string name="text_balance_type">收支类型</string>
    <string name="text_balance_money">收支金额</string>
    <string name="text_pay_voucher">付款凭证</string>
    <string name="text_rainwood_system">雨木管理系统</string>

</resources>
