<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_include_overtime"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical"
    android:visibility="gone">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="25dp"
        android:text="@string/record_apply_man"
        android:textColor="@color/labelColor"
        android:textSize="13sp" />

    <TextView
        android:id="@+id/tv_apply_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="15dp"
        android:text="韩梅梅"
        android:textColor="@color/fontColor"
        android:textSize="15sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="25dp"
        android:text="@string/record_overtime_obj"
        android:textColor="@color/labelColor"
        android:textSize="13sp" />

    <TextView
        android:id="@+id/tv_overtime_task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="15dp"
        android:text="客户 · 重庆红菊精密"
        android:textColor="@color/fontColor"
        android:textSize="15sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="25dp"
        android:text="@string/record_pre_time"
        android:textColor="@color/labelColor"
        android:textSize="13sp" />

    <TextView
        android:id="@+id/tv_pre_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="15dp"
        android:text="2020.03.20 18:00 - 2020.03.20 20:00"
        android:textColor="@color/fontColor"
        android:textSize="15sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="25dp"
        android:text="@string/record_overtime_reason"
        android:textColor="@color/labelColor"
        android:textSize="13sp" />

    <TextView
        android:id="@+id/tv_reason"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="26dp"
        android:lineSpacingExtra="12dp"
        android:text="加班整理宏巨精密企业管理系统的需求，完成同周共计PC端原型图。"
        android:textColor="@color/fontColor"
        android:textSize="15sp" />

</LinearLayout>