<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_include_out"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical"
    android:visibility="visible">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="25dp"
        android:text="@string/record_apply_man"
        android:textColor="@color/labelColor"
        android:textSize="13sp" />

    <TextView
        android:id="@+id/tv_out_apply_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="15dp"
        android:text="韩梅梅"
        android:textColor="@color/fontColor"
        android:textSize="15sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="25dp"
        android:text="@string/text_record_out_obj"
        android:textColor="@color/labelColor"
        android:textSize="13sp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/tv_out_obj"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="15dp"
        android:text="重庆博得瑞科技有限公司"
        android:textColor="@color/fontColor"
        android:textSize="15sp"
        android:visibility="gone" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="25dp"
        android:text="@string/text_record_pre_out_time"
        android:textColor="@color/labelColor"
        android:textSize="13sp" />

    <TextView
        android:id="@+id/tv_out_pre_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="15dp"
        android:text="2020.03.20 18:00 - 2020.03.20 20:00"
        android:textColor="@color/fontColor"
        android:textSize="15sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="25dp"
        android:text="@string/text_record_actual_out_time"
        android:textColor="@color/labelColor"
        android:textSize="13sp" />

    <TextView
        android:id="@+id/tv_out_actual_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="26dp"
        android:lineSpacingExtra="12dp"
        android:textColor="@color/fontColor"
        android:textSize="15sp"/>


</LinearLayout>