<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray40"
    android:orientation="vertical"
    tools:ignore="RtlSymmetry">

    <include layout="@layout/include_title_bar_none_menu_copy" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/shape_white_8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layoutAnimation="@anim/layout_fall_down"
            android:orientation="vertical"
            tools:layoutAnimation="@null">

            <com.rainwood.oa.ui.widget.GroupIconText
                android:id="@+id/git_state"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_record_status_bg"
                android:paddingStart="15dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                app:icon="@drawable/ic_status_wait_in"
                app:text="未开票"
                app:textColor="@color/fontColor" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="25dp"
                android:text="@string/text_invoice_name"
                android:textColor="@color/labelColor"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/tv_invoice_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:textColor="@color/fontColor"
                android:textSize="15sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="25dp"
                android:text="@string/text_sellers"
                android:textColor="@color/labelColor"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/tv_sellers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:textColor="@color/fontColor"
                android:textSize="15sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="25dp"
                android:text="@string/text_purchaser"
                android:textColor="@color/labelColor"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/tv_purchaser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:textColor="@color/blue05"
                android:textSize="15sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="25dp"
                android:text="@string/text_invoice_type"
                android:textColor="@color/labelColor"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/tv_invoice_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:textColor="@color/fontColor"
                android:textSize="15sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="25dp"
                android:text="@string/text_Levied_in_total"
                android:textColor="@color/labelColor"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/tv_levied_in_tax"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:textColor="@color/fontColor"
                android:textSize="15sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="25dp"
                android:text="@string/text_invoice_amount"
                android:textColor="@color/labelColor"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/tv_invoice_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:textColor="@color/fontColor"
                android:textSize="15sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="25dp"
                android:text="@string/text_invoice_tax"
                android:textColor="@color/labelColor"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/tv_invoice_tax"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:textColor="@color/fontColor"
                android:textSize="15sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="25dp"
                android:text="@string/text_note"
                android:textColor="@color/labelColor"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/tv_invoice_note"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:textColor="@color/fontColor"
                android:textSize="15sp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="25dp"
                android:text="@string/text_invoice_ico"
                android:textColor="@color/labelColor"
                android:textSize="13sp" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_invoice_ico"
                android:layout_width="77dp"
                android:layout_height="77dp"
                android:scaleType="centerCrop"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:textColor="@color/fontColor"
                android:textSize="15sp" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>