<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_include_card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="25dp"
        android:text="@string/record_apply_man"
        android:textColor="@color/labelColor"
        android:textSize="13sp" />

    <TextView
        android:id="@+id/tv_reissue_apply_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="15dp"
        android:textColor="@color/fontColor"
        android:textSize="15sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="25dp"
        android:text="@string/text_record_reissue_time"
        android:textColor="@color/labelColor"
        android:textSize="13sp" />

    <TextView
        android:id="@+id/tv_reissue_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="15dp"
        android:textColor="@color/fontColor"
        android:textSize="15sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="25dp"
        android:text="@string/text_record_reissue_reason"
        android:textColor="@color/labelColor"
        android:textSize="13sp" />

    <TextView
        android:id="@+id/tv_reissue_reason"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="26dp"
        android:lineSpacingExtra="12dp"
        android:textColor="@color/fontColor"
        android:textSize="15sp" />


</LinearLayout>